# books-final-processor

./: .env.example  .gitignore  12가지인생_simple.json  1등의_통찰_simple.json  4차산업혁명_simple.json  AGENTS.md  IMPROVEMENT_PLAN.md  PROJECT_STATUS.md  README.md  TODOs.md  analyze_footer_elements.py  analyze_page_mapping.py  check_pages.py  check_structure_chapters.py  cursor-master-sequence.md  pyproject.toml  test_chapter_patterns.py
.cursor/commands/: gen-proj-rules.md
.cursor/rules/: api-contract-sync.mdc  backend-api-design.mdc  backend-caching.mdc  backend-data-models.mdc  backend-extraction-summarization.mdc  backend-pdf-parsing.mdc  backend-structure-analysis.mdc  backend-summarization.mdc  backend-testing.mdc  (+3 more)
backend/: __init__.py
docs/: 100권 노션 원본_수정.csv  API.md  PRD_books-processor.md  TESTING.md  book-assistant_repomix_backend.md  book_report_specification.md  books_detailed_list.md  cache_analysis_report.md  cache_issue_analysis_20251203.md  cache_vs_db_storage_explanation.md  core_logics.md  e2e_test_checkpoints_and_logging.md  e2e_test_execution_plan.md  e2e_test_results_summary.md  entity_extraction_guideline.md  final_verification_results.md  llm_model_usage_summary.md  parsers_caching_flow_analysis.md  parsers_page_splitting_analysis.md  parsers_return_format_analysis.md  phase2_completion_summary.md  phase2_validation_checklist.md  structure_analysis_logic_detailed.md  structure_analysis_logic_explanation.md  structure_analysis_logic_explanation_v2.md  structure_analysis_logic_guidelines.md  test_files_cleanup_plan.md  test_issues_history.md
(+125 files in other folders)
