[tool.poetry]
name = "books-final-processor"
version = "0.1.0"
description = "도서 PDF 구조 분석 및 서머리 서비스"
authors = ["bluecalif"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
requests = "^2.31.0"
openai = "^1.3.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
pypdf = "^3.17.0"
beautifulsoup4 = "^4.12.2"
tiktoken = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "e2e: E2E 테스트 (실제 서버 실행, 실제 데이터 사용)",
    "slow: 실행 시간이 긴 테스트",
]

